--- a/.gitlab/coverage.yml
+++ b/.gitlab/coverage.yml
@@ -6,7 +6,7 @@
 #
 ---
 coverage:
-  image: hpclib/hiepacs
+  image: registry.gitlab.inria.fr/solverstack/docker/distrib
   stage: analyse
   script:
     - export INPUT_FILES=""
