--- a/.gitlab/release.yml
+++ b/.gitlab/release.yml
@@ -1,6 +1,6 @@
 ---
 release:
-  image: hpclib/hiepacs
+  image: registry.gitlab.inria.fr/solverstack/docker/distrib
   stage: deploy
   dependencies: []
   artifacts:
