CHAMELEONConfig.cmake.in: add CUDA and CUBLAS target after Find CUDA

--- a/cmake_modules/CHAMELEONConfig.cmake.in
+++ b/cmake_modules/CHAMELEONConfig.cmake.in
@@ -36,6 +36,24 @@ if (@CHAMELEON_USE_MPI@)
 endif()
 if (@CHAMELEON_USE_CUDA@ AND NOT @CHAMELEON_SIMULATION@)
   find_dependency(CUDA REQUIRED)
+  if ( CUDA_FOUND )
+    if (NOT TARGET CUDA::CUDA)
+      add_library(CUDA::CUDA INTERFACE IMPORTED)
+      if (CUDA_INCLUDE_DIRS)
+        set_target_properties(CUDA::CUDA PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CUDA_INCLUDE_DIRS}")
+      endif()
+      if (CUDA_LIBRARIES)
+        set_target_properties(CUDA::CUDA PROPERTIES INTERFACE_LINK_LIBRARIES "${CUDA_LIBRARIES}")
+      endif()
+      if (NOT TARGET CUDA::CUBLAS)
+        add_library(CUDA::CUBLAS INTERFACE IMPORTED)
+        if (CUDA_CUBLAS_LIBRARIES)
+          set_target_properties(CUDA::CUBLAS PROPERTIES INTERFACE_LINK_LIBRARIES "${CUDA_CUBLAS_LIBRARIES}")
+        endif()
+        target_link_libraries(CUDA::CUBLAS INTERFACE CUDA::CUDA)
+      endif()
+    endif()
+  endif()
 endif()
 
 # add the targets file
