--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "doc/orgmode/org-html-themes"]
 	path = doc/orgmode/org-html-themes
 	url = https://github.com/fniessen/org-html-themes.git
+[submodule "coreblas/hmat-oss"]
+	path = coreblas/hmat-oss
+	url = https://github.com/jeromerobert/hmat-oss.git
