--- a/cmake_modules/CHAMELEONConfig.cmake.in
+++ b/cmake_modules/CHAMELEONConfig.cmake.in
@@ -57,6 +57,15 @@ if (@CHAMELEON_USE_CUDA@ AND NOT @CHAMELEON_SIMULATION@)
 endif()
 
 # add the targets file
+if (@CHAMELEON_USE_HMAT@)
+  if ( @CHAMELEON_HMAT_EXTERNAL@ )
+    # Should be a find_dependency() but we fix it to make sure we use
+    # the correct path in higher level projects.
+    include("@HMAT_DIR@/HMATTargets.cmake")
+  else()
+    include("${CMAKE_CURRENT_LIST_DIR}/../hmat/HMATTargets.cmake")
+  endif()
+endif()
 include("${CMAKE_CURRENT_LIST_DIR}/../hqr/hqrTargets.cmake")
 if (NOT @CHAMELEON_SIMULATION@)
   include("${CMAKE_CURRENT_LIST_DIR}/coreblasTargets.cmake")
