--- a/coreblas/CMakeLists.txt
+++ b/coreblas/CMakeLists.txt
@@ -26,6 +26,9 @@
 #
 ###
 
+if (CHAMELEON_USE_HMAT AND NOT CHAMELEON_HMAT_EXTERNAL)
+  add_subdirectory(hmat-oss)
+endif()
 add_subdirectory(include)
 add_subdirectory(compute)
 add_subdirectory(eztrace_module)
