Add test_FEMBEM as a submodule of testings

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "coreblas/hmat-oss"]
 	path = coreblas/hmat-oss
 	url = https://github.com/jeromerobert/hmat-oss.git
+[submodule "testing/test_fembem"]
+	path = testing/test_fembem
+	url = https://gitlab.inria.fr/solverstack/test_fembem.git
