Add hmat testings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ include:
   - .gitlab/test_parsec.yml
   - .gitlab/test_quark.yml
   - .gitlab/test_openmp.yml
+  - .gitlab/test_hmat.yml
   - .gitlab/coverage.yml
   - .gitlab/coverity.yml
   - .gitlab/sonarqube.yml
