control/desc: Add a print function to debug descriptors and an associated testing mainly for debug purpose

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -45,6 +45,7 @@ set(CHAMELEON_SOURCES_TARGETS "${CHAMELEON_SOURCES_TARGETS};testing_include" CAC
 set(ZSRC
   chameleon_ztesting.c
   testing_zcheck.c
+  testing_zprint.c
   ##################
   # LAPACK
   ##################
