--- a/coreblas/eztrace_module/CMakeLists.txt
+++ b/coreblas/eztrace_module/CMakeLists.txt
@@ -28,7 +28,7 @@ if (NOT EZTRACE_FOUND)
     find_package(EZTRACE)
 endif()
 
-if (EZTRACE_FOUND AND EZTRACE_DIR_FOUND)
+if (EZTRACE_FOUND)
 
     set(EZTRACE_eztrace_create_plugin_DIR "EZTRACE_eztrace_create_plugin_DIR-NOTFOUND")
     find_path(EZTRACE_eztrace_create_plugin_DIR
@@ -75,7 +75,7 @@ if (EZTRACE_FOUND AND EZTRACE_DIR_FOUND)
         endforeach()
     endif (EZTRACE_eztrace_create_plugin_DIR)
 
-endif (EZTRACE_FOUND AND EZTRACE_DIR_FOUND)
+endif (EZTRACE_FOUND)
 
 ###
 ### END CMakeLists.txt
