--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -34,6 +34,7 @@
 #cmakedefine HAVE_STARPU_DATA_SET_OOC_FLAG
 #cmakedefine HAVE_STARPU_INTERFACE_COPY2D
 #cmakedefine HAVE_STARPU_DATA_PEEK
+#cmakedefine HAVE_STARPU_REUSE_DATA_ON_NODE
 #cmakedefine HAVE_STARPU_MPI_DATA_MIGRATE
 #cmakedefine HAVE_STARPU_MPI_DATA_REGISTER
 #cmakedefine HAVE_STARPU_MPI_COMM_RANK
