--- a/runtime/starpu/include/chameleon_starpu.h.in
+++ b/runtime/starpu/include/chameleon_starpu.h.in
@@ -63,10 +63,8 @@
 
 #include <cublas.h>
 #include <starpu_cublas.h>
-#if defined(CHAMELEON_USE_CUBLAS_V2)
 #include <cublas_v2.h>
 #include <starpu_cublas_v2.h>
-#endif
 #endif
 
 #if defined(CHAMELEON_SIMULATION)
@@ -128,16 +126,11 @@ typedef struct starpu_option_request_s {
 #endif
 
 /*
- * cuBlasAPI v2 - StarPU enable the support for cublas handle
+ * cuBLAS API - StarPU enable the support for cublas handle
  */
-#if defined(CHAMELEON_USE_CUDA) && defined(CHAMELEON_USE_CUBLAS_V2)
+#if defined(CHAMELEON_USE_CUDA)
 #define RUNTIME_getStream(_stream_)                             \
     cublasHandle_t _stream_ = starpu_cublas_get_local_handle();
-#else
-#define RUNTIME_getStream(_stream_)                             \
-    cudaStream_t _stream_ = starpu_cuda_get_local_stream();     \
-    cublasSetKernelStream( stream );
-
 #endif
 
 /*
