testing: Add a vendor testing to check performance of the vendor libraries

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -43,22 +43,11 @@ set(CHAMELEON_SOURCES_TARGETS "${CHAMELEON_SOURCES_TARGETS};testing_include" CAC
 
 # Generate chameleon testing sources for all possible precisions
 # ----------------------------------------------------------
-set(ZSRC
-  chameleon_ztesting.c
-  testing_zcheck.c
-  testing_zprint.c
-  ##################
-  # LAPACK
-  ##################
-  #testing_zlaset.c
-  testing_zlacpy.c
+set(ZSRC_W_STDAPI
   testing_zlange.c
   testing_zlanhe.c
   testing_zlansy.c
   testing_zlantr.c
-  testing_zgeadd.c
-  testing_ztradd.c
-  testing_zlascal.c
   testing_zgemm.c
   testing_zhemm.c
   testing_zherk.c
@@ -71,17 +60,25 @@ set(ZSRC
   testing_zpotrf.c
   testing_zpotrs.c
   testing_zposv.c
-  testing_ztrtri.c
-  testing_zlauum.c
   testing_zpotri.c
   testing_zpoinv.c
+)
+
+set(ZSRC_WO_STDAPI
+  #testing_zlaset.c
+  testing_zlacpy.c
+  testing_zgeadd.c
+  testing_ztradd.c
+  testing_zlascal.c
+  testing_ztrtri.c
+  testing_zlauum.c
   testing_zsytrf.c
   testing_zsytrs.c
   testing_zsysv.c
   testing_zgenm2.c
+  testing_zgesv.c
   testing_zgetrf.c
   testing_zgetrs.c
-  testing_zgesv.c
   testing_zgeqrf.c
   testing_zungqr.c
   testing_zunmqr.c
@@ -105,8 +102,23 @@ set(ZSRC
   testing_zplrnk.c
   testing_zcesca.c
   testing_zgram.c
-  )
+)
 
+foreach(_precision ${CHAMELEON_PRECISION} )
+
+  precisions_rules_py(${_precision}SRC_W_STDAPI_GENERATED "${ZSRC_W_STDAPI}"
+    PRECISIONS "${_precision}" )
+
+  precisions_rules_py(${_precision}SRC_WO_STDAPI_GENERATED "${ZSRC_WO_STDAPI}"
+    PRECISIONS "${_precision}" )
+
+endforeach()
+
+set(ZSRC
+  chameleon_ztesting.c
+  testing_zcheck.c
+  testing_zprint.c
+)
 
 # Create one testing per precision with all files
 # -----------------------------------------------
@@ -118,9 +130,12 @@ foreach(_precision ${CHAMELEON_PRECISION} )
   set( __target_name chameleon_${_precision}testing )
   add_executable( ${__target_name}
     ${${_precision}SRC_GENERATED}
+    ${${_precision}SRC_W_STDAPI_GENERATED}
+    ${${_precision}SRC_WO_STDAPI_GENERATED}
     values.c
     run_list.c
     parameters.c
+    testings.c
     )
   add_dependencies(${__target_name}
     chameleon_include
@@ -159,6 +174,71 @@ foreach(_precision ${CHAMELEON_PRECISION} )
 
 endforeach()
 
+# VENDOR api tests
+set(ZSRC_VENDOR
+  vendor_ztesting.c
+)
+
+if ( CHAMELEON_TESTINGS_VENDOR )
+  foreach(_precision ${CHAMELEON_PRECISION} )
+
+    precisions_rules_py(${_precision}SRC_VENDOR_GENERATED "${ZSRC_VENDOR}"
+      PRECISIONS "${_precision}" )
+
+    set( __target_name vendor_${_precision}testing )
+    add_executable( ${__target_name}
+      ${${_precision}SRC_VENDOR_GENERATED}
+      ${${_precision}SRC_W_STDAPI_GENERATED}
+      values.c
+      run_list.c
+      parameters.c
+      testings.c
+      )
+
+    target_compile_definitions(${__target_name}
+      PRIVATE CHAMELEON_TESTINGS_VENDOR
+    )
+
+    add_dependencies(${__target_name}
+      chameleon_include
+      control_include
+      testing_include
+      coreblas_include
+      )
+
+    target_include_directories(${__target_name} PRIVATE
+      ${CMAKE_CURRENT_SOURCE_DIR}
+      ${CMAKE_CURRENT_BINARY_DIR}
+      )
+    # testing_zcheck.c includes additional chameleon headers
+    # coreblas/include/coreblas/cblas.h, coreblas/coreblas_z.h, control/common.h, ...
+    target_include_directories(${__target_name} PRIVATE
+      ${CHAMELEON_SOURCE_DIR}
+      ${CHAMELEON_BINARY_DIR}
+      ${CHAMELEON_SOURCE_DIR}/include
+      ${CHAMELEON_BINARY_DIR}/include
+      ${CHAMELEON_SOURCE_DIR}/coreblas/include
+      ${CHAMELEON_BINARY_DIR}/coreblas/include
+      )
+
+    if (BLAS_MT_LIBRARIES)
+      target_link_libraries(${__target_name} PRIVATE
+        ${BLAS_MT_LIBRARIES})
+    else()
+      target_link_libraries(${__target_name} PRIVATE
+        MORSE::LAPACKE
+        MORSE::CBLAS)
+    endif()
+
+    target_link_libraries(${__target_name} PRIVATE MORSE::M)
+    target_link_libraries(${__target_name} PRIVATE chameleon)
+
+    install(TARGETS ${__target_name}
+      DESTINATION bin/ )
+
+  endforeach()
+endif()
+
 # Force generation of sources
 # ---------------------------
 set(TESTING_SRCS)
@@ -167,6 +247,13 @@ foreach(_precision ${CHAMELEON_PRECISION})
 endforeach()
 add_custom_target(testing_sources ALL SOURCES ${TESTING_SRCS})
 set(CHAMELEON_SOURCES_TARGETS "${CHAMELEON_SOURCES_TARGETS};testing_sources" CACHE INTERNAL "List of targets of sources")
+
+set(VENDOR_SRCS)
+foreach(_precision ${CHAMELEON_PRECISION})
+  list(APPEND VENDOR_SRCS ${${_precision}SRC_VENDOR_GENERATED})
+endforeach()
+add_custom_target(vendor_sources ALL SOURCES ${VENDOR_SRCS})
+set(CHAMELEON_SOURCES_TARGETS "${CHAMELEON_SOURCES_TARGETS};vendor_sources" CACHE INTERNAL "List of targets of sources")
 
 #-------- Tests ---------
 include(CTestLists.cmake)
